<resources>
    <string name="app_name">xmdebug</string>
    <string name="cld_a">%1$s个</string>
    <string name="cld_account_info">账号信息</string>
    <string name="cld_activity_switch">显示Activity名称</string>
    <string name="cld_android_version">Android版本%1$s</string>
    <string name="cld_app_data_directory">应用目录</string>
    <string name="cld_app_info">应用信息</string>
    <string name="cld_app_version">应用版本%1$s</string>
    <string name="cld_authority_state">权限状态</string>
    <string name="cld_base_info">基本信息</string>
    <string name="cld_change_ad_city">广告城市切换</string>
    <string name="cld_change_network_env">网络环境切换</string>
    <string name="cld_check">查看</string>
    <string name="cld_choose_env">选择环境</string>
    <string name="cld_city_code">City Code: </string>
    <string name="cld_clean_data">清理数据</string>
    <string name="cld_close">关闭</string>
    <string name="cld_come_on_crash">来啊！互相伤害啊！</string>
    <string name="cld_count">%1$s项</string>
    <string name="cld_crash_log">崩溃日志</string>
    <string name="cld_crash_time">崩溃发生时间: </string>
    <string name="cld_database">数据库</string>
    <string name="cld_debug_switch">调试开关</string>
    <string name="cld_device_info">设备信息</string>
    <string name="cld_dir_details">文件：%1$d 文件夹：%2$d</string>
    <string name="cld_dump_file">dump文件</string>
    <string name="cld_enter_home">进入Debug首页</string>
    <string name="cld_entrance">神秘通道</string>
    <string name="cld_env_pre_publish">预发布环境</string>
    <string name="cld_env_production">正式环境</string>
    <string name="cld_env_text">测试环境</string>
    <string name="cld_float_window">悬浮窗</string>
    <string name="cld_give_me_a_crash">来一发崩溃吧</string>
    <string name="cld_host">Host</string>
    <string name="cld_local_data">本地数据</string>
    <string name="cld_log">日志相关</string>
    <string name="cld_network">网络相关</string>
    <string name="cld_only_show_frame">只显示View边框</string>
    <string name="cld_open">打开</string>
    <string name="cld_please_input_city_code">请输入City Code</string>
    <string name="cld_please_input_id">请输入id</string>
    <string name="cld_react_native">React Native</string>
    <string name="cld_react_native_host_hint">请输入Host地址</string>
    <string name="cld_react_native_module_name">Module Name</string>
    <string name="cld_react_native_module_name_hint">请输入module name</string>
    <string name="cld_shared_preference">SharedPreference</string>
    <string name="cld_show_3d_views">3D Views</string>
    <string name="cld_show_ids">显示id</string>
    <string name="cld_show_views">Views</string>
    <string name="cld_stack_trace">堆栈信息</string>
    <string name="cld_start">启动</string>
    <string name="cld_statistics_switch">统计事件显示</string>
    <string name="cld_views_current_level">当前层级: %1$d</string>
    <string name="cld_views_total_level">总层级: %1$d</string>
</resources>
