<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/cld_react_native"
        android:textColor="@color/cld_text_light"
        android:textSize="@dimen/cld_text_size_small" />

    <include layout="@layout/cld_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cld_selector_default_white_pressed"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cld_react_native_module_name"
            android:textColor="@color/cld_text_dark"
            android:textSize="@dimen/cld_text_size_large" />

        <EditText
            android:id="@+id/cld_react_native_module_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="end"
            android:hint="@string/cld_react_native_module_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/cld_text_dark"
            android:textColorHint="@color/cld_text_light"
            android:textSize="@dimen/cld_text_size_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cld_selector_default_white_pressed"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cld_host"
            android:textColor="@color/cld_text_dark"
            android:textSize="@dimen/cld_text_size_large" />

        <EditText
            android:id="@+id/cld_react_native_host_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="end"
            android:hint="@string/cld_react_native_host_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/cld_text_dark"
            android:textColorHint="@color/cld_text_light"
            android:textSize="@dimen/cld_text_size_large" />

    </LinearLayout>

    <TextView
        android:id="@+id/cld_react_native_start_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cld_selector_default_white_pressed"
        android:drawableEnd="@drawable/cld_svg_icon_arrow_right_wrapper"
        android:drawableRight="@drawable/cld_svg_icon_arrow_right_wrapper"
        android:padding="10dp"
        android:text="@string/cld_start"
        android:textColor="@color/cld_text_dark"
        android:textSize="@dimen/cld_text_size_large" />

</LinearLayout>