<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/cld_base_info"
        android:textColor="@color/cld_text_light"
        android:textSize="@dimen/cld_text_size_small" />

    <include layout="@layout/cld_divider" />

    <LinearLayout
        android:id="@+id/cld_home_app_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cld_selector_default_white_pressed"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cld_app_info"
            android:textColor="@color/cld_text_dark"
            android:textSize="@dimen/cld_text_size_large" />

        <TextView
            android:id="@+id/cld_home_app_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cld_svg_icon_arrow_right_wrapper"
            android:drawableRight="@drawable/cld_svg_icon_arrow_right_wrapper"
            android:gravity="center_vertical"
            android:textColor="@color/cld_text_light"
            android:textSize="@dimen/cld_text_size_medium"
            tools:text="应用版本: 0.0.1" />

    </LinearLayout>

    <include layout="@layout/cld_divider" />

    <LinearLayout
        android:id="@+id/cld_home_device_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cld_selector_default_white_pressed"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cld_device_info"
            android:textColor="@color/cld_text_dark"
            android:textSize="@dimen/cld_text_size_large" />

        <TextView
            android:id="@+id/cld_home_device_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cld_svg_icon_arrow_right_wrapper"
            android:drawableRight="@drawable/cld_svg_icon_arrow_right_wrapper"
            android:gravity="center_vertical"
            android:textColor="@color/cld_text_light"
            android:textSize="@dimen/cld_text_size_medium"
            tools:text="Android版本: 0.0.1" />

    </LinearLayout>

    <include layout="@layout/cld_divider" />

</LinearLayout>